--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,10 +28,11 @@ body {
     rgb(var(--background-start-rgb));
   display: flex;
   flex-direction: column;
-  main {
-    flex: 1;
-    overflow: auto;
-  }
+}
+
+.main {
+  flex: 1;
+  overflow: auto;
 }
 
 .float-button {
